<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanondegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reade">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="my_own_app">My Own App!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="this_button_will_launch">This button will launch: </string>
</resources>
