<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffd9e3f6">



    <TextView
        android:textColor="#000000"
        android:text="@string/my_nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="24dp" />

    <Button
        android:background="#F08C35"
        android:textColor="#000000"
        android:minWidth = "200dp"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button2"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:onClick="spotifyStreamerLaunch"/>

    <Button
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:textColor="#000000"
        android:minWidth = "200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:text="@string/scores_app"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="scoresAppLaunch"/>

    <Button
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:textColor="#000000"
        android:minWidth = "200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="libraryAppLaunch"/>

    <Button
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:textColor="#000000"
        android:minWidth = "200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="buildItBiggerLaunch"/>

    <Button
        android:layout_marginTop="10dp"
        android:background="#F08C35"
        android:textColor="#000000"
        android:minWidth = "200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reade"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="xyzReaderLaunch"/>

    <Button
        android:layout_marginTop="10dp"
        android:background="#F44336"
        android:textColor="#000000"
        android:minWidth = "200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button7"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:onClick="capstoneLaunch"/>

</RelativeLayout>
